src/components/styles/CharactersTable.pcss
.chip {
    display: inline-flex;
    align-items: center;
    user-select: none;
    background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-7));
    padding: 0.125rem 0.5rem;
    border-radius: 1rem;
}

.mindscape-chip[data-level="0"] {
    background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-7));
}
.mindscape-chip[data-level="1"] {
    background-color: #1f4054;
}
.mindscape-chip[data-level="2"] {
    background-color: #005a6c;
}
.mindscape-chip[data-level="3"] {
    background-color: #007b79;
}
.mindscape-chip[data-level="4"] {
    background-color: #00966b;
}
.mindscape-chip[data-level="5"] {
    background-color: #64e45f;
    color: black;
}
.mindscape-chip[data-level="6"] {
    background-color: var(--mantine-primary-color-filled);
    color: black;
}

@media (max-width: $mantine-breakpoint-lg) {
    .is-narrow {
        display: none;
    }
}

